--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [closed]
+    branches:
+      - main
 
 permissions:
   contents: write   # 👈 allows pushing to gh-pages
@@ -11,6 +15,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # Only run if push to main OR if PR was merged (not just closed)
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
 
     steps:
       - name: Checkout Repository
